♻️ refactor(collector): 패턴 B watchlist 게이트 lease 전환
KisWatchlistClient fetchGroups(throttle-off 1-shot)·fetchStocksByGroup(매 시도
재경유)를 GuardedKisExecutor 경유로 전환. WatchlistSyncService 외부
consume/release 제거(이중 throttle 방지) + per-batch 스냅샷 1회 + 고아화된
글로벌 isa KisRateLimiter 필드 제거(빈 정의는 M7 정리). 그룹 skip·
failedGroupCount·markRemoved defer 보존. DP2 의도된 동작 변경(외부 슬롯 3회
점유 → 매 시도 재경유) — 회귀+신규 동작 테스트 동반.

SPEC: SPEC-COLLECTOR-KISGATE-001 (M5/T13+T14)

🗿 MoAI <email@mo.ai.kr>