@@ -6,16 +6,21 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.aaa.collector.kis.KisRateLimitException;
 import com.aaa.collector.kis.KisRateLimiter;
+import com.aaa.collector.kis.gate.KeyLeaseRegistry;
+import com.aaa.collector.kis.gate.KeyLeaseRegistry.LeaseSession;
+import com.aaa.collector.kis.token.HealthyKeySelector;
+import com.aaa.collector.kis.token.KisAccountCredential;
 import com.aaa.collector.stock.enums.Market;
 import com.aaa.collector.stock.grade.GradeClassificationService;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -23,24 +28,50 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+/**
+ * SPEC-COLLECTOR-KISGATE-001 M5(T14) — {@link WatchlistSyncService} 게이트 전환 단위 테스트.
+ *
+ * <p>Behavior:Changed(DP2)이므로 <b>회귀</b>(그룹 skip + failedGroupCount + markRemoved defer + classify
+ * 항상 호출)와 <b>신규 동작</b>(외부 {@code kisRateLimiter} consume/release 제거 = 이중 throttle 방지 / 종목 조회 단계
+ * {@code selectHealthy()} per-batch 1회 스냅샷)을 함께 검증한다.
+ *
+ * <p>{@code selectHealthy()} 호출 횟수 검증을 위해 실제 {@link KeyLeaseRegistry} + mock {@link
+ * HealthyKeySelector}를 주입한다(게이트 자체는 client mock 뒤에 가려져 본 테스트 범위 밖).
+ */
 @ExtendWith(MockitoExtension.class)
+@DisplayName("WatchlistSyncService — 외부 throttle 제거 + per-batch 스냅샷")
 class WatchlistSyncServiceTest {
 
-    @Mock private KisRateLimiter kisRateLimiter;
+    private static final KisAccountCredential K1 =
+            new KisAccountCredential("isa", "11111111", "appkey-isa", "appsecret-isa");
+    private static final KisAccountCredential K2 =
+            new KisAccountCredential("gold", "22222222", "appkey-gold", "appsecret-gold");
+
+    @Mock private HealthyKeySelector healthyKeySelector;
     @Mock private KisWatchlistClient kisWatchlistClient;
     @Mock private WatchlistWriter watchlistWriter;
     @Mock private WatchlistStockResolver watchlistStockResolver;
     @Mock private GradeClassificationService gradeClassificationService;
-    @InjectMocks private WatchlistSyncService watchlistSyncService;
+
+    private WatchlistSyncService syncService;
 
     @BeforeEach
-    void setUpResolver() {
-        // ②단계는 resolver에 위임되므로, 기본적으로 입력 raw 목록을 그대로 통과시키는 stub을 둔다.
-        // (개별 테스트가 필요 시 override). resolver의 ②단계 상세 행위는 WatchlistStockResolverTest가 검증한다.
+    void setUp() {
+        KeyLeaseRegistry keyLeaseRegistry = new KeyLeaseRegistry(healthyKeySelector);
+        syncService =
+                new WatchlistSyncService(
+                        kisWatchlistClient,
+                        keyLeaseRegistry,
+                        watchlistWriter,
+                        watchlistStockResolver,
+                        gradeClassificationService);
+
+        // 기본: 건강 키 2개 스냅샷. selectHealthy 호출 횟수는 개별 테스트가 검증.
+        lenient().when(healthyKeySelector.selectHealthy()).thenReturn(List.of(K1, K2));
+        // ②단계는 resolver 위임 — 기본적으로 입력 raw를 그대로 통과시키는 stub(필요 시 개별 override).
         lenient()
                 .when(watchlistStockResolver.resolve(anyList()))
                 .thenAnswer(
@@ -59,103 +90,40 @@ class WatchlistSyncServiceTest {
     }
 
     @Nested
-    @DisplayName("sync — 그룹 목록")
-    class Groups {
+    @DisplayName("그룹 순회 + 위임 (회귀)")
+    class GroupsAndDelegation {
 
         @Test
-        @DisplayName("빈 그룹 목록 — fetchStocksByGroup 미호출, upsertAll 빈 목록으로 호출")
-        void sync_emptyGroups_noFetchStocksByGroupAndUpsertAllWithEmptyList() {
+        @DisplayName("빈 그룹 목록 — fetchStocksByGroup·selectHealthy 미호출, upsertAll 빈 목록")
+        void sync_emptyGroups_noFetchAndNoSnapshot() {
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of());
 
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            verify(kisWatchlistClient, never()).fetchStocksByGroup(any());
+            verify(kisWatchlistClient, never()).fetchStocksByGroup(any(), any());
+            verify(healthyKeySelector, never()).selectHealthy();
             verify(watchlistWriter).upsertAll(eq(List.of()), eq(0));
         }
 
         @Test
-        @DisplayName("여러 그룹 — 각 그룹별 fetchStocksByGroup 호출")
+        @DisplayName("여러 그룹 — 각 그룹별 fetchStocksByGroup(session, code) 호출")
         void sync_multipleGroups_fetchesStocksForEachGroup() {
-            // Arrange
             KisGroupListResponse.Group group1 =
                     new KisGroupListResponse.Group("001", "그룹1", "1", "1");
             KisGroupListResponse.Group group2 =
                     new KisGroupListResponse.Group("002", "그룹2", "1", "2");
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup(any())).thenReturn(List.of());
+            when(kisWatchlistClient.fetchStocksByGroup(any(), any())).thenReturn(List.of());
 
-            // Act
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            // Assert
-            verify(kisWatchlistClient, times(1)).fetchStocksByGroup("001");
-            verify(kisWatchlistClient, times(1)).fetchStocksByGroup("002");
-        }
-    }
-
-    @Nested
-    @DisplayName("sync — ②단계 resolver 위임 (REQ-002, 시나리오 2)")
-    class ResolverDelegation {
-
-        @Test
-        @DisplayName("dedup된 raw 목록으로 resolver.resolve 호출, 결과를 upsertAll에 전달")
-        void sync_delegatesDedupedListToResolver_andPassesResultToUpsertAll() {
-            // Arrange
-            KisGroupListResponse.Group group =
-                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
-            KisStockListByGroupResponse.Stock item =
-                    new KisStockListByGroupResponse.Stock("J", "005930", "KRX", "삼성전자");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group));
-            when(kisWatchlistClient.fetchStocksByGroup("001")).thenReturn(List.of(item));
-
-            List<ResolvedStock> resolved =
-                    List.of(
-                            new ResolvedStock(
-                                    "005930",
-                                    "삼성전자",
-                                    Market.KOSPI,
-                                    new StockInfo(null, null, null)));
-            when(watchlistStockResolver.resolve(anyList())).thenReturn(resolved);
-
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: resolver가 dedup된 raw 1종목으로 호출되고, 그 결과가 upsertAll로 전달됨
-            verify(watchlistStockResolver)
-                    .resolve(
-                            argThat(
-                                    list ->
-                                            list.size() == 1
-                                                    && "005930"
-                                                            .equals(list.getFirst().jongCode())));
-            verify(watchlistWriter).upsertAll(eq(resolved), eq(0));
-        }
-
-        @Test
-        @DisplayName("여러 그룹 중복 종목 — dedup 후 resolver에 1개만 전달")
-        void sync_duplicateAcrossGroups_deduplicatedBeforeResolver() {
-            // Arrange
-            KisGroupListResponse.Group group1 =
-                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
-            KisGroupListResponse.Group group2 =
-                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
-            KisStockListByGroupResponse.Stock item =
-                    new KisStockListByGroupResponse.Stock("J", "005930", "KRX", "삼성전자");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup("001")).thenReturn(List.of(item));
-            when(kisWatchlistClient.fetchStocksByGroup("002")).thenReturn(List.of(item));
-
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: dedup 키(jongCode:exchCode)가 같으므로 resolver에 1개만 전달
-            verify(watchlistStockResolver).resolve(argThat(list -> list.size() == 1));
+            verify(kisWatchlistClient, times(1)).fetchStocksByGroup(any(), eq("001"));
+            verify(kisWatchlistClient, times(1)).fetchStocksByGroup(any(), eq("002"));
         }
 
         @Test
         @DisplayName("동일 종목코드 다른 거래소 — dedup 키 다르므로 resolver에 2개 전달")
         void sync_sameSymbolDifferentExchange_treatedAsSeparateEntries() {
-            // Arrange
             KisGroupListResponse.Group group =
                     new KisGroupListResponse.Group("001", "그룹1", "2", "1");
             KisStockListByGroupResponse.Stock nas =
@@ -163,19 +131,22 @@ class WatchlistSyncServiceTest {
             KisStockListByGroupResponse.Stock nys =
                     new KisStockListByGroupResponse.Stock("FS", "ACME", "NYS", "ACME Inc");
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group));
-            when(kisWatchlistClient.fetchStocksByGroup("001")).thenReturn(List.of(nas, nys));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), eq("001")))
+                    .thenReturn(List.of(nas, nys));
 
-            // Act
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            // Assert
             verify(watchlistStockResolver).resolve(argThat(list -> list.size() == 2));
         }
+    }
+
+    @Nested
+    @DisplayName("그룹 skip + failedGroupCount + markRemoved defer (회귀, AC-7)")
+    class GroupSkipPreserved {
 
         @Test
-        @DisplayName("fetchStocksByGroup 실패 그룹 — 해당 그룹 skip, failedGroupCount 반영")
-        void sync_fetchStocksByGroupFails_failedGroupCountPropagated() {
-            // Arrange
+        @DisplayName("fetchStocksByGroup 소진 전파 — 그룹 skip, failedGroupCount 증가, 나머지 그룹 정상")
+        void sync_fetchStocksByGroupExhausted_skipsGroupAndIncrementsFailedCount() {
             KisGroupListResponse.Group group1 =
                     new KisGroupListResponse.Group("001", "그룹1", "1", "1");
             KisGroupListResponse.Group group2 =
@@ -183,14 +154,14 @@ class WatchlistSyncServiceTest {
             KisStockListByGroupResponse.Stock item =
                     new KisStockListByGroupResponse.Stock("J", "005930", "KRX", "삼성전자");
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup("001"))
-                    .thenThrow(new RuntimeException("네트워크 오류"));
-            when(kisWatchlistClient.fetchStocksByGroup("002")).thenReturn(List.of(item));
+            // 001은 게이트 재시도 소진 예외 전파, 002는 정상
+            when(kisWatchlistClient.fetchStocksByGroup(any(), eq("001")))
+                    .thenThrow(new KisRateLimitException("isa", "EGW00201 소진"));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), eq("002"))).thenReturn(List.of(item));
 
-            // Act
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            // Assert — 001 그룹 실패해도 002 그룹의 종목 1개는 resolver를 거쳐 upsertAll에 전달, failedGroupCount=1
+            // 001 실패해도 002 종목 1개는 resolver→upsertAll, failedGroupCount=1 (markRemoved defer 트리거)
             verify(watchlistStockResolver).resolve(argThat(list -> list.size() == 1));
             ArgumentCaptor<List<ResolvedStock>> captor = ArgumentCaptor.captor();
             verify(watchlistWriter).upsertAll(captor.capture(), eq(1));
@@ -199,115 +170,92 @@ class WatchlistSyncServiceTest {
     }
 
     @Nested
-    @DisplayName("①단계 rate limit (전역 kisRateLimiter, 무변경) — 시나리오 7")
-    class Stage1RateLimit {
+    @DisplayName("외부 throttle 제거 = 이중 throttle 방지 (신규 동작, DP2/R3)")
+    class ExternalThrottleRemoved {
 
         @Test
-        @DisplayName("N개 그룹 — fetchStocksByGroup 호출 전 consume이 N번 호출된다")
-        void sync_nGroups_consumeCalledNTimesForGroupFetch() throws InterruptedException {
-            // Arrange
-            KisGroupListResponse.Group group1 =
-                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
-            KisGroupListResponse.Group group2 =
-                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup(any())).thenReturn(List.of());
+        @DisplayName("서비스는 KisRateLimiter를 협력자로 갖지 않는다 (외부 consume/release 제거)")
+        void syncService_hasNoGlobalRateLimiterCollaborator() {
+            List<Class<?>> ctorParamTypes =
+                    Arrays.asList(
+                            WatchlistSyncService.class.getDeclaredConstructors()[0]
+                                    .getParameterTypes());
 
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: 그룹 2개 → fetchStocksByGroup consume 2회. ②단계는 전역 limiter 미사용(resolver에 위임).
-            verify(kisRateLimiter, times(2)).consume();
-        }
-
-        @Test
-        @DisplayName("②단계 종목 존재 — 전역 kisRateLimiter consume이 추가로 호출되지 않는다 (②단계 분리)")
-        void sync_stage2Stocks_noAdditionalGlobalConsume() throws InterruptedException {
-            // Arrange
-            KisGroupListResponse.Group group =
-                    new KisGroupListResponse.Group("001", "그룹1", "2", "1");
-            KisStockListByGroupResponse.Stock nas =
-                    new KisStockListByGroupResponse.Stock("FS", "AAPL", "NAS", "Apple");
-            KisStockListByGroupResponse.Stock nys =
-                    new KisStockListByGroupResponse.Stock("FS", "NVDA", "NYS", "NVIDIA");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group));
-            when(kisWatchlistClient.fetchStocksByGroup("001")).thenReturn(List.of(nas, nys));
-
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: 그룹 1회만 (②단계 종목은 resolver 위임, 전역 limiter 미경유)
-            verify(kisRateLimiter, times(1)).consume();
-        }
-
-        @Test
-        @DisplayName("빈 그룹 목록 — consume 미호출")
-        void sync_emptyGroups_consumeNeverCalled() throws InterruptedException {
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of());
-
-            watchlistSyncService.sync();
-
-            verify(kisRateLimiter, never()).consume();
-        }
-
-        @Test
-        @DisplayName("①단계 consume 후 release가 호출된다")
-        void sync_groupFetch_releaseCalledAfterConsume() throws InterruptedException {
-            // Arrange
-            KisGroupListResponse.Group group =
-                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
-            KisStockListByGroupResponse.Stock item =
-                    new KisStockListByGroupResponse.Stock("FS", "AAPL", "NAS", "Apple");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group));
-            when(kisWatchlistClient.fetchStocksByGroup("001")).thenReturn(List.of(item));
-
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: ①단계 그룹fetch consume 1 → release 1 (②단계는 전역 limiter 미경유)
-            verify(kisRateLimiter, times(1)).release();
-        }
-
-        @Test
-        @DisplayName("①단계 consume InterruptedException — 해당 그룹 skip, 나머지 그룹 정상 처리")
-        void sync_consumeThrowsInterruptedException_affectedGroupSkipped()
-                throws InterruptedException {
-            // Arrange
-            KisGroupListResponse.Group group1 =
-                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
-            KisGroupListResponse.Group group2 =
-                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
-            KisStockListByGroupResponse.Stock item1 =
-                    new KisStockListByGroupResponse.Stock("J", "005930", "KRX", "삼성전자");
-            KisStockListByGroupResponse.Stock item2 =
-                    new KisStockListByGroupResponse.Stock("J", "000660", "KRX", "SK하이닉스");
-            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup(any()))
-                    .thenAnswer(
-                            inv ->
-                                    "001".equals(inv.getArgument(0))
-                                            ? List.of(item1)
-                                            : List.of(item2));
-            // 1회차 consume → InterruptedException(한 그룹 skip), 2회차 → doNothing(나머지 그룹 성공)
-            doThrow(new InterruptedException()).doNothing().when(kisRateLimiter).consume();
-
-            // Act
-            watchlistSyncService.sync();
-
-            // Assert: 두 그룹 중 하나는 skip → resolver에 1종목 전달, failedGroupCount=1
-            verify(watchlistStockResolver).resolve(argThat(list -> list.size() == 1));
-            verify(watchlistWriter).upsertAll(any(), eq(1));
+            // 전역 KisRateLimiter 의존 제거 — throttle은 게이트(매 시도 per-key)가 담당, 외부 점유 없음.
+            assertThat(ctorParamTypes).doesNotContain(KisRateLimiter.class);
+            // 키 lease는 KeyLeaseRegistry로 per-batch 1회 스냅샷.
+            assertThat(ctorParamTypes).contains(KeyLeaseRegistry.class, KisWatchlistClient.class);
         }
     }
 
     @Nested
-    @DisplayName("시나리오 8 — classify 트리거 및 예외 격리 (SPEC-COLLECTOR-GRADE-002)")
+    @DisplayName("per-batch 헬스 스냅샷 1회 (신규 동작, REQ-KISGATE-006a)")
+    class PerBatchSnapshot {
+
+        @Test
+        @DisplayName("N개 그룹 — 종목 조회 단계 selectHealthy()는 정확히 1회만 호출(그룹마다 재산출 금지)")
+        void sync_multipleGroups_selectHealthyCalledOnce() {
+            KisGroupListResponse.Group group1 =
+                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
+            KisGroupListResponse.Group group2 =
+                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
+            KisGroupListResponse.Group group3 =
+                    new KisGroupListResponse.Group("003", "그룹3", "1", "3");
+            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2, group3));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), any())).thenReturn(List.of());
+
+            syncService.sync();
+
+            // 그룹 3개여도 종목 조회 단계 헬스 스냅샷은 단위당 1회(콜드 프로브 비용 bound).
+            verify(healthyKeySelector, times(1)).selectHealthy();
+        }
+
+        @Test
+        @DisplayName("모든 그룹이 동일 세션 인스턴스를 공유하여 fetchStocksByGroup에 전달된다")
+        void sync_allGroupsShareSameSession() {
+            KisGroupListResponse.Group group1 =
+                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
+            KisGroupListResponse.Group group2 =
+                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
+            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), any())).thenReturn(List.of());
+
+            syncService.sync();
+
+            ArgumentCaptor<LeaseSession> sessionCaptor =
+                    ArgumentCaptor.forClass(LeaseSession.class);
+            verify(kisWatchlistClient, times(2)).fetchStocksByGroup(sessionCaptor.capture(), any());
+            // 두 그룹 호출이 동일 세션 인스턴스를 공유(per-batch 1회 open).
+            List<LeaseSession> captured = sessionCaptor.getAllValues();
+            assertThat(captured.getFirst()).isSameAs(captured.get(1));
+        }
+
+        @Test
+        @DisplayName("전 키 사망(빈 스냅샷) — 종목 조회 0회, 모든 그룹 skip 집계, classify 여전히 호출")
+        void sync_allKeysDead_skipsAllGroupsAndNoFetch() {
+            when(healthyKeySelector.selectHealthy()).thenReturn(List.of());
+            KisGroupListResponse.Group group1 =
+                    new KisGroupListResponse.Group("001", "그룹1", "1", "1");
+            KisGroupListResponse.Group group2 =
+                    new KisGroupListResponse.Group("002", "그룹2", "1", "2");
+            when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
+
+            syncService.sync();
+
+            // 빈 스냅샷 = 전 키 사망 → 종목 조회 0회, 2개 그룹 모두 skip 집계(failedGroupCount=2).
+            verify(kisWatchlistClient, never()).fetchStocksByGroup(any(), any());
+            verify(watchlistWriter).upsertAll(eq(List.of()), eq(2));
+            verify(gradeClassificationService).classify();
+        }
+    }
+
+    @Nested
+    @DisplayName("classify 트리거 및 예외 격리 (회귀, SPEC-COLLECTOR-GRADE-002)")
     class ClassifyTrigger {
 
         @Test
-        @DisplayName("시나리오 1: failedGroupCount>=1 — sync 후 classify 정확히 1회 호출")
+        @DisplayName("일부 그룹 실패 — sync 후 classify 정확히 1회 호출")
         void sync_partialGroupFailure_classifyCalledOnce() {
-            // Arrange: 일부 그룹 실패(failedGroupCount=1)
             KisGroupListResponse.Group group1 =
                     new KisGroupListResponse.Group("001", "그룹1", "1", "1");
             KisGroupListResponse.Group group2 =
@@ -315,39 +263,34 @@ class WatchlistSyncServiceTest {
             KisStockListByGroupResponse.Stock item =
                     new KisStockListByGroupResponse.Stock("J", "005930", "KRX", "삼성전자");
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of(group1, group2));
-            when(kisWatchlistClient.fetchStocksByGroup("001"))
-                    .thenThrow(new RuntimeException("rate-limit"));
-            when(kisWatchlistClient.fetchStocksByGroup("002")).thenReturn(List.of(item));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), eq("001")))
+                    .thenThrow(new KisRateLimitException("isa", "rate-limit"));
+            when(kisWatchlistClient.fetchStocksByGroup(any(), eq("002"))).thenReturn(List.of(item));
 
-            // Act
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            // Assert: failedGroupCount=1이어도 classify 1회 호출
             verify(gradeClassificationService).classify();
         }
 
         @Test
-        @DisplayName("시나리오 2: 전면 실패(빈 stocks, upsertAll early-return) — classify 여전히 호출")
+        @DisplayName("전면 실패(빈 그룹, upsertAll early-return) — classify 여전히 호출")
         void sync_totalGroupFailure_classifyStillCalled() {
-            // Arrange: 모든 그룹 조회 실패 → resolvedStocks 빈 목록 → upsertAll early-return
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of());
 
-            // Act
-            watchlistSyncService.sync();
+            syncService.sync();
 
-            // Assert: early-return과 무관하게 classify 호출
             verify(gradeClassificationService).classify();
         }
 
         @Test
-        @DisplayName("시나리오 3: classify 예외 — sync 미실패(예외 전파 없음)")
+        @DisplayName("classify 예외 — sync 미실패(예외 전파 없음)")
         void sync_classifyThrows_syncDoesNotThrow() {
-            // Arrange
             when(kisWatchlistClient.fetchGroups()).thenReturn(List.of());
-            doThrow(new RuntimeException("등급 분류 실패")).when(gradeClassificationService).classify();
+            org.mockito.Mockito.doThrow(new RuntimeException("등급 분류 실패"))
+                    .when(gradeClassificationService)
+                    .classify();
 
-            // Act & Assert
-            assertThatCode(watchlistSyncService::sync).doesNotThrowAnyException();
+            assertThatCode(syncService::sync).doesNotThrowAnyException();
         }
     }
 }
